--- a/index.html
+++ b/index.html
@@ -213,6 +213,21 @@
         <h1 class="uppercase text-[#011F5B] text-[12px] font-semibold tracking-widest flex justify-center pt-6 ">more events via penn today</h1>
     </section>
 
+    <section class="border-1 border-none p-4 m-5 bg-[#f2f2f2]">
+        <div class="border-1 border-[#e0e0e0] p-6 flex flex-col items-center text-center justify-center">
+            <div class="">
+                <img src="img/Inspiring-Impact-Campaign-Logo.png" alt="">
+            </div>
+            <div class="w-6 h-0.75 bg-[#99a5bd] mt-4"></div>
+            <div>
+                <p class="text-[14px] text-[#0e266e] pt-5">Your support ignites change locally and globally, transforming Penn into a powerful engine that advances knowledge for society's greatest good.</p>
+            </div>
+            <div class="pt-10">
+                <button class=" text-[12px] text-[#0e266e] font-bold tracking-widest border-1 border-[#e0e0e0] p-6 px-16 rounded-4xl hover:bg-white hover:text-[#b11205] uppercase">Support Penn</button>
+            </div>
+        </div>
+        
+    </section>
      <script>
        function showSlide(index) {
     const slidesContainer = document.querySelector('.slides-container');
