--- a/index.html
+++ b/index.html
@@ -223,11 +223,24 @@
                 <p class="text-[14px] text-[#0e266e] pt-5">Your support ignites change locally and globally, transforming Penn into a powerful engine that advances knowledge for society's greatest good.</p>
             </div>
             <div class="pt-10">
-                <button class=" text-[12px] text-[#0e266e] font-bold tracking-widest border-1 border-[#e0e0e0] p-6 px-16 rounded-4xl hover:bg-white hover:text-[#b11205] uppercase">Support Penn</button>
+                <button class=" text-[12px] text-[#0e266e] font-bold tracking-widest border-1 border-[#e0e0e0] p-6 px-16 rounded-4xl hover:bg-[#011F5B] hover:text-white uppercase">Support Penn</button>
+            </div>
+        </div>
+    </section>
+<!-- support Community -->
+<section class=" ">
+    <div class=" bg-[#011f5b]  text-white m-4 border-none p-2">
+        <div class="border-1 p-5 pt-8  border-[#274174] flex flex-col items-center text-center justify-center">
+            <h2 class="pt-7 text-xl font-serif">Supporting Our Community</h2>
+            <div class="w-5 h-0.75 bg-[#99a5bd] mt-4 "></div>
+            <p class="pt-5 text-[12px]/6 tracking-wider ">During these challenging times, Penn remains committed to supporting students, faculty, and staff and to sharing information with our larger community of alumni, parents, and friends.</p>
+            <div class="pt-8">
+                <button class=" text-[12px] font-bold tracking-widest uppercase border-1 border-[#274174] p-6 px-12 rounded-4xl hover:bg-white hover:text-[#b11205]">Learn More</button>
             </div>
         </div>
         
-    </section>
+    </div>
+ </section>
      <script>
        function showSlide(index) {
     const slidesContainer = document.querySelector('.slides-container');
