--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <nav class=" relative flex justify-between items-center px-6 md:px-16 py-4 text-white">
                 <!-- Left: Logo -->
                 <div class="flex items-center">
-                    <img src="ded8a451-5240-4198-8aa2-eed41f762b91.svg" alt="Penn Logo" class="w-[150px]">
+                    <img src="img/UPenn-logo.svg" alt="Penn Logo" class="w-[150px]">
                 </div>
     
                 <!-- Center: Navigation Links (Hidden on Mobile) -->
